# OptixPathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  Main.cpp  RenderBase.cpp  RenderBase.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TraceHost.cpp  TraceHost.hpp
src/loaders/: ImageLoader.cpp  ImageLoader.hpp  ObjLoader.cpp  ObjLoader.hpp
src/scene/geometry/: Sphere.hpp  TriMesh.hpp  TriangleMesh.hpp
src/scene/materials/: Lambertian.hpp  UberMaterial.hpp
src/scene/trace/: Ray.hpp
src/shaders/: CMakeLists.txt  EmbedFile.cpp  EmbedShader.cpp  Trace.cu  Trace.cuh
src/shared_types/: Ray.hpp
src/shared_types/geometry/: Sphere.hpp
src/shared_types/materials/: Lambertian.hpp
src/types/: Ray.hpp
src/types/geometry/: Sphere.hpp
src/types/materials/: Lambertian.hpp
